<resources>
    <string name="app_name">My Workout Logs</string>

    <string name="text_weight">Weight</string>
    <string name="text_note">Note</string>
    <string name="text_settings">Settings</string>
    <string name="text_workout_logs">Workout Logs</string>
    <string name="text_exercise">Exercise</string>
    <string name="text_camera">Photo</string>
    <string name="heading_exercises">Exercises</string>

    <string name="text_exercise_name">Exercise Name</string>
    <string name="text_reps">Reps</string>
    <string name="text_weight_measure">Lbs</string>

    <string name="title_activity_bottomnav">Bottomnav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>
