<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:dividerPadding="10dp">

    <ImageButton
        android:id="@+id/muscle_group_image"
        android:background="@drawable/mg_back"
        android:layout_width="40dp"
        android:layout_height="40dp" />

    <EditText
        android:id="@+id/exercise_name"
        android:textColorHint="@color/colorHint"
        android:textColor="@color/colorText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_exercise_name"
        android:nextFocusDown="@+id/exercise_weight"
        android:backgroundTint="@color/colorHint"
        android:inputType="textAutoComplete" />

    <EditText
        android:id="@+id/exercise_weight"
        android:textColorHint="@color/colorHint"
        android:textColor="@color/colorText"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_weight_measure"
        android:backgroundTint="@color/colorHint"
        android:nextFocusDown="@+id/exercise_reos"
        android:inputType="number" />

    <EditText
        android:id="@+id/exercise_reos"
        android:textColor="@color/colorText"
        android:layout_width="50dp"
        android:textColorHint="@color/colorHint"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorHint"
        android:hint="@string/text_reps"
        android:nextFocusDown="@+id/exercise_name"
        android:imeOptions="actionNext"
        android:inputType="number" />

    <ImageButton
        android:id="@+id/clear_exercise_row"
        android:padding="4dp"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="@drawable/clear" />

</TableRow>